exports[`test all props are passed to the update functions 1`] = `
<div>
  Hello 
  esa
</div>
`;

exports[`test all props are passed to the update functions 2`] = `
<div>
  Hello 
  suuronen
</div>
`;

exports[`test basic updating 1`] = `
<div>
  Hello 
  esa
</div>
`;

exports[`test basic updating 2`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test can use function to update the state 1`] = `
<div>
  0
</div>
`;

exports[`test can use function to update the state 2`] = `
<div>
  1
</div>
`;

exports[`test do not recreate update function on parent prop changes 1`] = `
<div>
  Hi
   
  esa
</div>
`;

exports[`test do not recreate update function on parent prop changes 2`] = `
<div>
  Hellou
   
  esa
</div>
`;

exports[`test lodash strings paths are not expanded in mapState 1`] = `
<div>
  hello 
  underscore
</div>
`;

exports[`test lodash strings paths are not expanded in mapState 2`] = `
<div>
  hello 
  lodash
</div>
`;

exports[`test lodash strings paths are not expanded in mapState 3`] = `
Object {
  "foo.bar": Object {
    "name": "lodash",
  },
}
`;

exports[`test pass scope as a prop 1`] = `
<div>
  Hello 
  esa
</div>
`;

exports[`test pass scope as a prop 2`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test prop scope change generates new update function 1`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test prop scope change generates new update function 2`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test updating with map state 1`] = `
<div>
  Hello 
  ESA
</div>
`;

exports[`test updating with map state 2`] = `
<div>
  Hello 
  MATTI
</div>
`;
